--- a/Source/DK.TwoFactorAuth/DK.TwoFactorAuth.csproj
+++ b/Source/DK.TwoFactorAuth/DK.TwoFactorAuth.csproj
@@ -2,6 +2,25 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Keon.TwoFactorAuth</AssemblyName>
+    <RootNamespace>Keon.TwoFactorAuth</RootNamespace>
+    <Authors>darakeon</Authors>
+    <Company>Dara Keon</Company>
+    <Product>Keon Two Factor Auth</Product>
+    <Description>Two factor code and secret generator</Description>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/darakeon/dk-lib</PackageProjectUrl>
+    <PackageIconUrl>https://avatars0.githubusercontent.com/u/16213361?s=64</PackageIconUrl>
+    <RepositoryUrl>https://github.com/darakeon/dk-lib</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>utility two-factor twofactor 2fa tfa</PackageTags>
+    <PackageReleaseNotes>First upload to Nuget</PackageReleaseNotes>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Lucas\Git\Me\DK\Source\DK.TwoFactorAuth\Keon.TwoFactorAuth.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
