--- a/Source/DK.TwoFactorAuth/DK.TwoFactorAuth.csproj
+++ b/Source/DK.TwoFactorAuth/DK.TwoFactorAuth.csproj
@@ -17,6 +17,7 @@
     <PackageReleaseNotes>First upload to Nuget</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
