--- a/Source/TwoFactorAuth/TwoFactorAuth.csproj
+++ b/Source/TwoFactorAuth/TwoFactorAuth.csproj
@@ -21,7 +21,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Lucas\Git\Me\DK\Source\DK.TwoFactorAuth\Keon.TwoFactorAuth.xml</DocumentationFile>
+    <DocumentationFile>C:\Lucas\Git\Me\DK\Source\TwoFactorAuth\Keon.TwoFactorAuth.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
