--- a/Source/NHibernate/NHibernate.csproj
+++ b/Source/NHibernate/NHibernate.csproj
@@ -1,136 +1,36 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5CCE8FD9-BF36-4C3B-8651-D2FB97295D74}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Keon.NHibernate</RootNamespace>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <AssemblyName>Keon.NHibernate</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <RootNamespace>Keon.NHibernate</RootNamespace>
+    <Authors>darakeon</Authors>
+    <Company>Dara Keon</Company>
+    <Product>Keon NHibernate</Product>
+    <Description>NHibernate encapsulation with some pre-configured stuff</Description>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/darakeon/dk-lib</PackageProjectUrl>
+    <PackageIconUrl>https://avatars0.githubusercontent.com/u/16213361?s=64</PackageIconUrl>
+    <RepositoryUrl>https://github.com/darakeon/dk-lib</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>utility nhibernate orm</PackageTags>
+    <PackageReleaseNotes>Updated to .NET Core</PackageReleaseNotes>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>2.0.0</Version>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Keon.NHibernate.xml</DocumentationFile>
-    <Prefer32Bit>false</Prefer32Bit>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Lucas\Git\Me\DK\Source\NHibernate\Keon.NHibernate.xml</DocumentationFile>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Antlr3.Runtime.3.5.1\lib\net40-client\Antlr3.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="FluentNHibernate, Version=2.1.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentNHibernate.2.1.2\lib\net461\FluentNHibernate.dll</HintPath>
-    </Reference>
-    <Reference Include="Iesi.Collections, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\packages\Iesi.Collections.4.0.4\lib\net461\Iesi.Collections.dll</HintPath>
-    </Reference>
-    <Reference Include="NHibernate, Version=5.2.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\packages\NHibernate.5.2.6\lib\net461\NHibernate.dll</HintPath>
-    </Reference>
-    <Reference Include="Remotion.Linq, Version=2.2.0.0, Culture=neutral, PublicKeyToken=fee00910d6e5f53b, processorArchitecture=MSIL">
-      <HintPath>..\packages\Remotion.Linq.2.2.0\lib\net45\Remotion.Linq.dll</HintPath>
-    </Reference>
-    <Reference Include="Remotion.Linq.EagerFetching, Version=2.2.0.0, Culture=neutral, PublicKeyToken=fee00910d6e5f53b, processorArchitecture=MSIL">
-      <HintPath>..\packages\Remotion.Linq.EagerFetching.2.2.0\lib\net45\Remotion.Linq.EagerFetching.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Transactions" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="FluentNHibernate" Version="2.1.2" />
+    <PackageReference Include="NHibernate" Version="5.2.6" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="AutoMapping\AutoMappingOne2One.cs" />
-    <Compile Include="Base\BaseData.cs" />
-    <Compile Include="Base\BaseRepository.cs" />
-    <Compile Include="Base\BaseService.cs" />
-    <Compile Include="Fakes\FakeData.cs" />
-    <Compile Include="Base\IData.cs" />
-    <Compile Include="Base\ITransactionController.cs" />
-    <Compile Include="Base\IUpload.cs" />
-    <Compile Include="Base\IUploadParent.cs" />
-    <Compile Include="Base\SearchItem.cs" />
-    <Compile Include="Base\TransactionController.cs" />
-    <Compile Include="Conventions\BooleanConvention.cs" />
-    <Compile Include="Conventions\CascadeConvention.cs" />
-    <Compile Include="Conventions\EnumConvention.cs" />
-    <Compile Include="Conventions\NameConvention.cs" />
-    <Compile Include="Conventions\NullableConvention.cs" />
-    <Compile Include="Fakes\FakeTransaction.cs" />
-    <Compile Include="Fakes\IDbBackup.cs" />
-    <Compile Include="Helpers\Enums.cs" />
-    <Compile Include="Fakes\FakeHelper.cs" />
-    <Compile Include="Helpers\SchemaChanger.cs" />
-    <Compile Include="Helpers\StoreConfiguration.cs" />
-    <Compile Include="Helpers\StringsAsLike.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Base\SessionFactoryBuilder.cs" />
-    <Compile Include="Fakes\FakeQuery.cs" />
-    <Compile Include="..\DK.Util\Properties\MainAssemblyInfo.cs">
-      <Link>Properties\MainAssemblyInfo.cs</Link>
-    </Compile>
-    <Compile Include="Queries\GroupBy.cs" />
-    <Compile Include="Queries\IQuery.cs" />
-    <Compile Include="Queries\LikeType.cs" />
-    <Compile Include="Queries\Query.cs" />
-    <Compile Include="Queries\Summarize.cs" />
-    <Compile Include="Queries\SummarizeType.cs" />
-    <Compile Include="UserPassed\AutoMappingInfo.cs" />
-    <Compile Include="UserPassed\ConnectionInfo.cs" />
-    <Compile Include="UserPassed\DataInitializer.cs" />
-    <Compile Include="Helpers\CriteriaExtension.cs" />
-    <Compile Include="Base\ISearch.cs" />
-    <Compile Include="AutoMapping\AutoMappingOne2ManyEnum.cs" />
-    <Compile Include="AutoMapping\ReservedWord.cs" />
-    <Compile Include="Conventions\DecimalConvention.cs" />
-    <Compile Include="Conventions\StringTypeConvention.cs" />
-    <Compile Include="Helpers\OneToManyCollectionInstanceExtension.cs" />
-    <Compile Include="Helpers\PropertyPartExtension.cs" />
-    <Compile Include="Helpers\SessionExtension.cs" />
-    <Compile Include="Base\SessionFactoryManager.cs" />
-    <Compile Include="Base\SessionManager.cs" />
+    <ProjectReference Include="..\Util\Util.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DK.Util\DK.Util.csproj">
-      <Project>{CF70FB71-50D7-4014-92CF-9ABF51579EC6}</Project>
-      <Name>DK.Util</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
