--- a/Source/Util/Util.nuspec
+++ b/Source/Util/Util.nuspec
@@ -4,7 +4,7 @@
         <id>$id$</id>
 
         <version>$version$</version>
-        <title>$title$</title>
+        <title>$product$</title>
         <description>$description$</description>
         <summary>$description$</summary>
         <tags>utility</tags>
