--- a/Source/Util/Util.csproj
+++ b/Source/Util/Util.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <AssemblyName>Keon.Util</AssemblyName>
     <RootNamespace>Keon.Util</RootNamespace>
     <Authors>darakeon</Authors>
@@ -14,10 +14,10 @@
     <RepositoryUrl>https://github.com/darakeon/dk-lib</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>utility</PackageTags>
-    <PackageReleaseNotes>Updated to .NET Core</PackageReleaseNotes>
+    <PackageReleaseNotes>Fix Normalize Property Name funcion</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
     <PackageIcon>image.png</PackageIcon>
   </PropertyGroup>
 
@@ -37,4 +37,7 @@
     </None>
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="copy $(OutDir)\Keon.Util.dll C:\Users\lcsal\.nuget\packages\keon.util\2.0.0\lib\netcoreapp3.0" />
+  </Target>
 </Project>
