--- a/Source/TwoFactorAuth/TwoFactorAuth.csproj
+++ b/Source/TwoFactorAuth/TwoFactorAuth.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>Keon.TwoFactorAuth</AssemblyName>
     <RootNamespace>Keon.TwoFactorAuth</RootNamespace>
     <Authors>darakeon</Authors>
@@ -36,4 +36,7 @@
     </None>
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="copy $(OutDir)\Keon.TwoFactorAuth.dll C:\Users\lcsal\.nuget\packages\keon.twofactorauth\1.0.1\lib\netcoreapp3.0" />
+  </Target>
 </Project>
