--- a/Source/TwoFactorAuth/TwoFactorAuth.csproj
+++ b/Source/TwoFactorAuth/TwoFactorAuth.csproj
@@ -22,7 +22,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Lucas\Git\Me\DK\Source\TwoFactorAuth\Keon.TwoFactorAuth.xml</DocumentationFile>
+    <DocumentationFile>Keon.TwoFactorAuth.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
