--- a/Source/XML/XML.csproj
+++ b/Source/XML/XML.csproj
@@ -22,7 +22,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Lucas\Git\Me\DK\Source\XML\Keon.XML.xml</DocumentationFile>
+    <DocumentationFile>Keon.XML.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
