--- a/Source/.editorconfig
+++ b/Source/.editorconfig
@@ -8,5 +8,6 @@ end_of_line = lf
 dotnet_naming_rule.private_symbols.severity = suggestion
 dotnet_naming_rule.private_symbols.symbols = locals_and_parameters
 dotnet_naming_rule.private_symbols.style = camel_case_style
-dotnet_naming_symbols.locals_and_parameters.applicable_kinds = parameter, local
+dotnet_naming_symbols.locals_and_parameters.applicable_kinds = parameter, local, field, method
+dotnet_naming_symbols.locals_and_parameters.applicable_accessibilities = private, protected, protected_internal, private_protected
 dotnet_naming_style.camel_case_style.capitalization = camel_case
