--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,6 +109,33 @@ jobs:
           name: upload
           command: dotnet nuget push --source "${NUGET_FEED_URL}" --api-key="${NUGET_KEY}" packs/*.nupkg --skip-duplicate
 
+  xml:
+    docker:
+      - image: darakeon/netcore
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - dotnet-{{ checksum "Source/XML/XML.csproj" }}
+      - run:
+          name: dependencies
+          command: dotnet restore Source/XML/XML.csproj
+      - save_cache:
+          key: dotnet-{{ checksum "Source/XML/XML.csproj" }}
+          paths:
+            - ~/.nuget/packages
+      - run:
+          name: build
+          command: dotnet build -c Release --no-restore Source/XML/XML.csproj
+      - run:
+          name: pack
+          command: dotnet pack -o packs -c Release --no-restore Source/XML/XML.csproj
+      - store_artifacts:
+          path: packs
+      - run:
+          name: upload
+          command: dotnet nuget push --source "${NUGET_FEED_URL}" --api-key="${NUGET_KEY}" packs/*.nupkg --skip-duplicate
+
 workflows:
   version: 2.1
   all:
@@ -117,3 +144,4 @@ workflows:
       - nhibernate
       - mvc
       - tfa
+      - xml
