--- a/Source/Eml/Eml.csproj
+++ b/Source/Eml/Eml.csproj
@@ -6,7 +6,10 @@
     <Authors>darakeon</Authors>
     <Company>Dara Keon</Company>
     <Product>Keon Eml</Product>
-    <Description>Eml files translations to email headers + body</Description>
+    <Description>Eml files translations to email headers + body
+
+Using .NET 3.1 because of AWS lambda - it does not accepts 5.0 at simplest version
+</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
@@ -17,6 +20,8 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>eml reader</PackageTags>
     <RootNamespace>Keon.Eml</RootNamespace>
+    <Version>2.0.0</Version>
+    <PackageReleaseNotes>Added parsing of multipart content type</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
