--- a/Source/Eml/Eml.csproj
+++ b/Source/Eml/Eml.csproj
@@ -20,8 +20,8 @@ Using .NET 3.1 because of AWS lambda - it does not accepts 5.0 at simplest versi
     <RepositoryType>git</RepositoryType>
     <PackageTags>eml reader</PackageTags>
     <RootNamespace>Keon.Eml</RootNamespace>
-    <Version>2.1.0</Version>
-    <PackageReleaseNotes>PRE tag for plain text</PackageReleaseNotes>
+    <Version>2.2.0</Version>
+    <PackageReleaseNotes>Style at contents from different types division</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
