--- a/Source/Eml/Eml.csproj
+++ b/Source/Eml/Eml.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>Keon.Eml</AssemblyName>
     <Authors>darakeon</Authors>
     <Company>Dara Keon</Company>
@@ -20,7 +20,7 @@ Using .NET 3.1 because of AWS lambda - it does not accepts 5.0 at simplest versi
     <RepositoryType>git</RepositoryType>
     <PackageTags>eml reader</PackageTags>
     <RootNamespace>Keon.Eml</RootNamespace>
-    <Version>2.2.0</Version>
+    <Version>3.0.0</Version>
     <PackageReleaseNotes>Style at contents from different types division</PackageReleaseNotes>
   </PropertyGroup>
 
