--- a/Source/Eml.Tests/Eml.Tests.csproj
+++ b/Source/Eml.Tests/Eml.Tests.csproj
@@ -32,6 +32,9 @@
     <None Update="examples\*.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="examples\*.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
