--- a/Source/Util/Util.csproj
+++ b/Source/Util/Util.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<TargetFramework>net6.0</TargetFramework>
+	<TargetFramework>net7.0</TargetFramework>
 	<AssemblyName>Keon.Util</AssemblyName>
 	<RootNamespace>Keon.Util</RootNamespace>
 	<Authors>darakeon</Authors>
@@ -14,10 +14,10 @@
 	<RepositoryUrl>https://github.com/darakeon/dk-lib</RepositoryUrl>
 	<RepositoryType>git</RepositoryType>
 	<PackageTags>utility</PackageTags>
-	<PackageReleaseNotes>Fix Normalize Property Name funcion</PackageReleaseNotes>
+	<PackageReleaseNotes>Upgrade to .NET 7.0</PackageReleaseNotes>
 	<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	<Version>3.0.2</Version>
+	<Version>4.0.0</Version>
 	<PackageIcon>image.png</PackageIcon>
   </PropertyGroup>
 
