--- a/Source/TwoFactorAuth/TwoFactorAuth.csproj
+++ b/Source/TwoFactorAuth/TwoFactorAuth.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<TargetFramework>net6.0</TargetFramework>
+	<TargetFramework>net7.0</TargetFramework>
 	<AssemblyName>Keon.TwoFactorAuth</AssemblyName>
 	<RootNamespace>Keon.TwoFactorAuth</RootNamespace>
 	<Authors>darakeon</Authors>
@@ -14,10 +14,10 @@
 	<RepositoryUrl>https://github.com/darakeon/dk-lib</RepositoryUrl>
 	<RepositoryType>git</RepositoryType>
 	<PackageTags>utility two-factor twofactor 2fa tfa</PackageTags>
-	<PackageReleaseNotes>First upload to Nuget</PackageReleaseNotes>
+	<PackageReleaseNotes>Upgrade to .NET 7.0</PackageReleaseNotes>
 	<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	<Version>2.0.3</Version>
+	<Version>3.0.0</Version>
 	<PackageIcon>image.png</PackageIcon>
   </PropertyGroup>
 
