--- a/Source/Eml/Eml.csproj
+++ b/Source/Eml/Eml.csproj
@@ -1,15 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <AssemblyName>Keon.Eml</AssemblyName>
     <Authors>darakeon</Authors>
     <Company>Dara Keon</Company>
     <Product>Keon Eml</Product>
-    <Description>Eml files translations to email headers + body
-
-Using .NET 3.1 because of AWS lambda - it does not accepts 5.0 at simplest version
-</Description>
+    <Description>Eml files translations to email headers + body</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
@@ -20,8 +17,8 @@ Using .NET 3.1 because of AWS lambda - it does not accepts 5.0 at simplest versi
     <RepositoryType>git</RepositoryType>
     <PackageTags>eml reader</PackageTags>
     <RootNamespace>Keon.Eml</RootNamespace>
-    <Version>4.0.0</Version>
-    <PackageReleaseNotes>Style at contents from different types division</PackageReleaseNotes>
+    <Version>5.0.0</Version>
+    <PackageReleaseNotes>Upgrade to .NET 7.0</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
