--- a/Source/NHibernate/NHibernate.csproj
+++ b/Source/NHibernate/NHibernate.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<TargetFramework>net6.0</TargetFramework>
+	<TargetFramework>net7.0</TargetFramework>
 	<AssemblyName>Keon.NHibernate</AssemblyName>
 	<RootNamespace>Keon.NHibernate</RootNamespace>
 	<Authors>darakeon</Authors>
@@ -14,10 +14,10 @@
 	<RepositoryUrl>https://github.com/darakeon/dk-lib</RepositoryUrl>
 	<RepositoryType>git</RepositoryType>
 	<PackageTags>utility nhibernate orm</PackageTags>
-	<PackageReleaseNotes>Add NotIn to get properties not in a list, change Contains to In</PackageReleaseNotes>
+	<PackageReleaseNotes>Upgrade to .NET 7.0</PackageReleaseNotes>
 	<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	<Version>3.0.9</Version>
+	<Version>4.0.0</Version>
 	<PackageIcon>image.png</PackageIcon>
   </PropertyGroup>
 
