--- a/Source/Eml.Tests/Eml.Tests.csproj
+++ b/Source/Eml.Tests/Eml.Tests.csproj
@@ -2,7 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
+    <AssemblyName>Keon.Eml.Tests</AssemblyName>
+    <RootNamespace>Keon.Eml.Tests</RootNamespace>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
